--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>HOME</title>
-<link href="../immyjosh/home.css" rel="stylesheet" type="text/css">
+<link href="home.css" rel="stylesheet" type="text/css">
 
 
 </head>
