--- a/imm.html
+++ b/imm.html
@@ -21,7 +21,7 @@
     		<a href="index.html">Home</a>
     		<a href="immjo.html">background</a>
     		<a class="active" href="#">Profile</a>
-    		<a href="IMMY.html">About Coding</a>
+    		<a href="IMMY.HTML">About Coding</a>
     		
     	</div>
 
