--- a/immjo.html
+++ b/immjo.html
@@ -20,7 +20,7 @@
     		<a href="index.html">Home</a>
     		<a class="active" href="#">background</a>
     		<a href="imm.html">profile</a>
-    		<a href="IMMY.html">About coding</a>
+    		<a href="IMMY.HTML">About coding</a>
     		
     	</div>
  
