--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<a class="active" href="index.html">Home</a>
 		<a href="immjo.html">background</a>
 		<a href="imm.html">Profile</a>
-		<a href="IMMY.html">About Coding</a>
+		<a href="IMMY.HTML">About Coding</a>
 
 	</div>
 	<p>&nbsp;</p>
