--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	<p>&nbsp;</p>
 	<div class="imgbg">
 		<div class="animation">
-		<img src="../immyjosh/asitiiru.jpg" alt="" style="width:100%;border-radius: 150px; box-shadow: 0px 0px 60px">
+		<img src="asitiiru.jpg" alt="" style="width:100%;border-radius: 150px; box-shadow: 0px 0px 60px">
 		
 		
 		<div class="centered" style="margin-top: -250px">
