--- a/imm.html
+++ b/imm.html
@@ -26,7 +26,7 @@
     	</div>
 
     	<div class="image1">
-      <img src="../immyjosh/it.jpg">
+      <img src="it.jpg">
     </div>
         
   <div class="paragraph">
